--- a/account.html
+++ b/account.html
@@ -24,20 +24,17 @@
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="text" placeholder="Tìm kiếm">
         </div>
-
         <div class="header-right">
-            <a href="#">Tra cứu đơn hàng</a>
-            <a href="#">Giới thiệu</a>
-            <a href="#">Liên hệ</a>
+            <a href="order-tracking.html">Tra cứu đơn hàng</a>
+            <a href="gioithieu.html">Giới thiệu</a>
+            <a href="contact.html">Liên hệ</a>
             <div class="icons">
-                <div class="circle" ><i class="fa-solid fa-cart-shopping"></i></div>
+                <div class="circle"><i class="fa-solid fa-cart-shopping"></i></div>
                 <div class="circle"><i class="fa-solid fa-user"></i></div>
             </div>
         </div>
     </div>
 </header>
-<div id="header"></div>
-
 
 <div class="account-container">
 
@@ -53,6 +50,20 @@
         <ul class="menu-account">
             <li class="active" data-target="#page-profile">Tài khoản của tôi</li>
             <li data-target="#page-password">Đổi mật khẩu</li>
+            <!--page policy(chinh sach)-->
+            <li class="has-submenu">
+                <span class="menu-title">Chính sách <i class="fa-solid fa-chevron-down"></i></span>
+                <ul class="submenu">
+
+
+                    <li data-target="#policy-doitra">Chính sách đổi trả hoàn hàng</li>
+                    <li data-target="#policy-baomat">Chính sách bảo mật mật khẩu</li>
+                    <li data-target="#policy-muahang">Hướng dẫn mua hàng, sản phẩm</li>
+                    <li data-target="#policy-kiemhang">Chính sách kiểm hàng hóa vận chuyển</li>
+                    <li data-target="#policy-giaohang">Chính sách giao hàng tận nơi</li>
+                    <li data-target="#policy-thanhtoan">Hướng dẫn thanh toán đơn hàng</li>
+                </ul>
+            </li>
             <li data-target="#page-orders">Đơn mua</li>
         </ul>
 
@@ -108,6 +119,44 @@
                 <button id="btnChange" class="submit-btn">Đổi lại mật khẩu</button>
             </div>
         </div>
+
+
+           <!--======PAGE POLICY=======-->
+        <!-- ======= PAGE: CHÍNH SÁCH ======= -->
+        <div class="page" id="policy-doitra">
+            <h2>Chính sách đổi trả</h2>
+            <p>Nếu sản phẩm bị lỗi từ nhà sản xuất hoặc giao sai, quý khách được quyền đổi trả trong vòng 7 ngày kể từ khi nhận hàng.</p>
+        </div>
+
+        <div class="page" id="policy-baomat">
+            <h2>Chính sách bảo mật</h2>
+            <p>Chúng tôi cam kết bảo mật thông tin cá nhân của khách hàng, không chia sẻ với bên thứ ba nếu không có sự đồng ý.</p>
+        </div>
+
+        <div class="page" id="policy-muahang">
+            <h2>Hướng dẫn mua hàng</h2>
+            <p>Khách hàng có thể đặt hàng trực tiếp qua website hoặc liên hệ hotline để được hỗ trợ.</p>
+        </div>
+
+        <div class="page" id="policy-kiemhang">
+            <h2>Chính sách kiểm hàng</h2>
+            <p>Quý khách vui lòng kiểm tra sản phẩm trước khi ký nhận để đảm bảo quyền lợi của mình.</p>
+        </div>
+
+        <div class="page" id="policy-giaohang">
+            <h2>Chính sách giao hàng</h2>
+            <p>Chúng tôi hỗ trợ giao hàng toàn quốc, thời gian từ 2–5 ngày làm việc tùy khu vực.</p>
+        </div>
+
+        <div class="page" id="policy-thanhtoan">
+            <h2>Hướng dẫn thanh toán</h2>
+            <p>Chúng tôi chấp nhận thanh toán qua chuyển khoản, ví điện tử và tiền mặt khi nhận hàng.</p>
+        </div>
+
+
+
+
+
 
         <!--  PAGE ORDERS -->
         <div id="page-orders" class="page">
@@ -277,14 +326,16 @@
                         <div class="footer-col">
                             <h3>Liên kết</h3>
                             <ul>
-                                <li><a href="">Chính sách đổi trả hoàn hàng</a></li>
-                                <li><a href="">Chính sách bảo mật mật khẩu</a></li>
-                                <li><a href="">Hướng dẫn mua hàng, sản phẩm</a></li>
-                                <li><a href="">Chính sách kiểm hàng hóa vận chuyển</a></li>
-                                <li><a href="">Chính sách giao hàng tận nơi</a></li>
-                                <li><a href="">Hướng dẫn thanh toán đơn hàng</a></li>
+                                <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                                <li><a>Chính sách bảo mật mật khẩu</a></li>
+                                <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                                <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                                <li><a>Chính sách giao hàng tận nơi</a></li>
+                                <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                             </ul>
+
                         </div>
+
 
                         <!-- Cột 3: Thông tin liên hệ -->
                         <div class="footer-col">
@@ -320,6 +371,9 @@
 
 
 
+
+
+<script src="js/header.js.js"></script>
 
 <script src="js/account.js"></script>
 
