--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,221 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liên hệ - Noble Loft Theory</title>
-    <link rel="stylesheet" href="LienHe.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 </head>
-<body>
-<main class="contact-main">
-    <h1>Liên hệ với chúng tôi</h1>
-    <p>Hãy để lại lời nhắn hoặc liên hệ trực tiếp nếu bạn có bất kỳ thắc mắc nào.
-        Chúng tôi rất hân hạnh được hỗ trợ bạn!</p>
 
-    <div class="contact-container">
-        <!-- KHUNG NHỎ CHO THÔNG TIN LIÊN HỆ -->
-        <div class="info-wrapper">
-            <div class="contact-info">
-                <h2>Thông tin liên hệ</h2>
-                <p><i class="fa-solid fa-location-dot"></i> Khu phố 6, p.Linh Trung, TP Thủ Đức</p>
-                <p><i class="fa-solid fa-building"></i> Đại học Nông Lâm TP.HCM</p>
-                <p><i class="fa-solid fa-phone"></i> 0375 184 144 - 0338 177 631</p>
-                <p><i class="fa-solid fa-envelope"></i> NLT@noblelofttheory.com</p>
-                <p><i class="fa-brands fa-facebook"></i> Noble Loft Theory Decor</p>
+<body>
+    <style>
+        /* === BREADCRUMB === */
+        .breadcrumb {
+            margin: 20px 40px 10px;
+            color: #333;
+        }
+
+        .breadcrumb a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        .breadcrumb a:hover {
+            text-decoration: underline;
+            color: #74512D;
+        }
+
+        .breadcrumb .current {
+            color: #74512D;
+            font-weight: 700;
+        }
+    </style>
+    <!-- === HEADER === -->
+    <header class="header">
+    <div class="header-top">
+      <div class="logo">
+        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+        <span><a href="index.html">Noble Loft Theory</a></span>
+      </div>
+      <div class="search-box">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Tìm kiếm">
+      </div>
+      <div class="header-right">
+        <a href="tracking.html">Tra cứu đơn hàng</a>
+        <a href="gioithieu.html">Giới thiệu</a>
+        <a href="contact.html">Liên hệ</a>
+        <div class="icons">
+            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
+        </div>
+      </div>
+    </div>
+
+    <!-- <nav class="menu">
+      <a href="index.html" class="">Trang chủ</a>
+      <a href="living.html" class="">Phòng khách</a>
+      <a href="kitchen.html" class="">Phòng bếp</a>
+      <a href="bedroom.html" class="">Phòng ngủ</a>
+      <a href="office.html" class="">Phòng làm việc</a>
+      <a href="balcony.html" class="">Ban Công</a>
+
+      <div class="dropdown">
+        <a href="#">Decor <i class="fa-solid fa-chevron-down"></i></a>
+        <div class="dropdown-content">
+          <a href="#">Cây</a>
+          <a href="#">Hoa</a>
+          <a href="#">Đèn</a>
+          <a href="#">Tượng & Phụ kiện</a>
+          <a href="#">Đồng hồ</a>
+          <a href="#">Tranh</a> 
+          <a href="#">Gương</a>
+          <a href="#">Nến & Tinh dầu</a>
+          <a href="#">Bình & Lọ hoa</a>
+          <a href="#">Chăn & Gối</a>  
+          <a href="#">Kệ & Giá đỡ mini</a>
+          <a href="#">Bàn decor</a>
+          <a href="#">Ghế decor</a>
+        </div>
+      </div> -->
+    <!-- </nav> -->
+
+
+    </header>
+
+    <!-- ===== BREADCRUMB / TIẾN TRÌNH ===== -->
+    <div class="breadcrumb">
+        <a href="index.html">Trang chủ</a> &#47;
+        <span class="current">Liên hệ </t></span>
+    </div>
+
+    <main class="contact-main">
+        <h1>Liên hệ với chúng tôi</h1>
+        <p>Hãy để lại lời nhắn hoặc liên hệ trực tiếp nếu bạn có bất kỳ thắc mắc nào.
+            Chúng tôi rất hân hạnh được hỗ trợ bạn!</p>
+
+        <div class="contact-container">
+            <!-- KHUNG NHỎ CHO THÔNG TIN LIÊN HỆ -->
+            <div class="info-wrapper">
+                <div class="contact-info">
+                    <h2>Thông tin liên hệ</h2>
+                    <p><i class="fa-solid fa-location-dot"></i> Khu phố 6, p.Linh Trung, TP Thủ Đức</p>
+                    <p><i class="fa-solid fa-building"></i> Đại học Nông Lâm TP.HCM</p>
+                    <p><i class="fa-solid fa-phone"></i> 0375 184 144 - 0338 177 631</p>
+                    <p><i class="fa-solid fa-envelope"></i> NLT@noblelofttheory.com</p>
+                    <p><i class="fa-brands fa-facebook"></i> Noble Loft Theory Decor</p>
+                </div>
+            </div>
+
+            <!-- FORM GỬI LIÊN HỆ -->
+            <form class="contact-form">
+
+                <h2>Gửi lời nhắn cho chúng tôi</h2>
+                <label for="name">Họ và tên</label>
+                <input type="text" id="name" name="name" placeholder="Nhập họ và tên của bạn" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Nhập email của bạn" required>
+
+                <label for="message">Nội dung</label>
+                <textarea id="message" name="message" rows="5" placeholder="Nhập nội dung liên hệ..."
+                    required></textarea>
+
+                <button type="submit">Gửi liên hệ</button>
+            </form>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-columns">
+                <!-- Cột 1: Giới thiệu -->
+                <div class="footer-col">
+                    <h3>Giới thiệu</h3>
+                    <p>Chào mừng bạn đến với <strong>Noble Loft Theory</strong> — không gian dành cho những ai yêu thích
+                        cái đẹp và nghệ thuật trang trí nội thất.</p>
+                    <p>Chúng tôi mang đến các sản phẩm decor trang trí nhà với phong cách hiện đại, tối giản nhưng vẫn
+                        giữ được sự tinh tế trong từng chi tiết.</p>
+
+                </div>
+
+                <!-- Cột 2: Liên kết -->
+                <div class="footer-col">
+                    <h3>Liên kết</h3>
+                    <ul>
+                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
+                        <ul>
+
+                            <div> </div>
+                            <li>
+                                <p href="#"> Chính sách đổi trả hoàn hàng</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách bảo mật mật khẩu</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn mua hàng, sản phẩm</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách kiểm hàng hóa vận chuyển</p>
+                            </li>
+                            <li>
+                                <p href="#"> Chính sách giao hàng tận nơi</p>
+                            </li>
+                            <li>
+                                <p href="#"> Hướng dẫn thanh toán đơn hàng</p>
+                            </li>
+
+                        </ul>
+                    </ul>
+                </div>
+
+                <!-- Cột 3: Thông tin liên hệ -->
+                <div class="footer-col">
+                    <h3>Thông tin liên hệ</h3>
+                    <p><i class="fa fa-map-marker"></i> Khu phố 6, p.Linh Trung, tp.Thủ Đức</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm tp Hồ Chí Minh</p>
+                    <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
+
+                    <p><i class="fa fa-envelope"></i> <a
+                            href="mailto:NLT@noblelofttheory.com">NLT@noblelofttheory.com</a></p>
+                </div>
+
+
+                <!-- Cột 4: Fanpage -->
+                <div class="footer-col">
+                    <h3>Fanpage</h3>
+                    <div class="fanpage-box">
+                        <p>Liên hệ ngay trang chủ của shop Noble Loft Theory.</p>
+                        <p>Nếu bạn đang có thắc mắc gì ở sản phẩm.</p>
+                        <p>Fanpage, Youtube và Instagram.</p>
+
+
+                        <div class="social-box">
+                            <div class="social-icons">
+                                <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!-- FORM GỬI LIÊN HỆ -->
-        <form class="contact-form">
+        <div class="footer-bottom">
+            <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT </p>
+        </div>
+        </div>
+    </footer>
+    <script src="js/header.js"></script>
+</body>
 
-            <h2>Gửi lời nhắn cho chúng tôi</h2>
-            <label for="name">Họ và tên</label>
-            <input type="text" id="name" name="name" placeholder="Nhập họ và tên của bạn" required>
-
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Nhập email của bạn" required>
-
-            <label for="message">Nội dung</label>
-            <textarea id="message" name="message" rows="5" placeholder="Nhập nội dung liên hệ..." required></textarea>
-
-            <button type="submit">Gửi liên hệ</button>
-        </form>
-    </div>
-</main>
-
-<footer class="footer">
-    <div class="footer-bottom">
-        © 2025 Noble Loft Theory. All rights reserved.
-    </div>
-</footer>
+</html>
