--- a/footer.html
+++ b/footer.html
@@ -1,90 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Noble Loft Theory</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="css/footer.css">
-
 </head>
+
 <body>
-<!--    Kim Tiến gắn cái Header vô đây nhe -->
-<main>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-columns">
 
-    <!--còn phần giữa này là code của mấy sản phẩm với phần login signup của em Lan đồ nè-->
+                <!-- Cột 1: Giới thiệu -->
+                <div class="footer-col">
+                    <h3>Giới thiệu</h3>
+                    <p>Chào mừng bạn đến với <strong>Noble Loft Theory</strong> — không gian dành cho những ai yêu thích
+                        cái đẹp và nghệ thuật trang trí nội thất.</p>
+                    <p>Chúng tôi mang đến các sản phẩm decor trang trí nhà với phong cách hiện đại, tối giản nhưng vẫn
+                        giữ được sự tinh tế trong từng chi tiết.</p>
+                </div>
 
-</main>
-
-
-<footer class="footer">
-    <div class="container">
-        <div class="footer-columns">
-            <!-- Cột 1: Giới thiệu -->
-            <div class="footer-col">
-                <h3>Giới thiệu</h3>
-                <p>Chào mừng bạn đến với <strong>Noble Loft Theory</strong> — không gian dành cho những ai yêu thích cái đẹp và nghệ thuật trang trí nội thất.</p>
-                <p>Chúng tôi mang đến các sản phẩm decor trang trí nhà với phong cách hiện đại, tối giản nhưng vẫn giữ được sự tinh tế trong từng chi tiết.</p>
-
-            </div>
-
-            <!-- Cột 2: Liên kết -->
-            <div class="footer-col">
-                <h3>Liên kết</h3>
-                <ul>
-                    <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
+                <!-- Cột 2: Liên kết -->
+                <div class="footer-col">
+                    <h3>Liên kết</h3>
                     <ul>
-
-                        <div> </div>
-                        <li><p href="#"> Chính sách đổi trả hoàn hàng</p></li>
-                        <li><p href="#"> Chính sách bảo mật mật khẩu</p></li>
-                        <li><p href="#"> Hướng dẫn mua hàng, sản phẩm</p></li>
-                        <li><p href="#"> Chính sách kiểm hàng hóa vận chuyển</p></li>
-                        <li><p href="#"> Chính sách giao hàng tận nơi</p></li>
-                        <li><p href="#"> Hướng dẫn thanh toán đơn hàng</p></li>
-
+                        <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                        <li><a>Chính sách bảo mật mật khẩu</a></li>
+                        <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                        <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                        <li><a>Chính sách giao hàng tận nơi</a></li>
+                        <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                     </ul>
-                </ul>
-            </div>
 
-            <!-- Cột 3: Thông tin liên hệ -->
-            <div class="footer-col">
-                <h3>Thông tin liên hệ</h3>
-                <p><i class="fa fa-map-marker"></i> Khu phố 6, P.Linh Trung, TP.Thủ Đức</p>
-                <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
-                <p><i class="fa fa-phone"></i> Liên hệ: 03751841444  -  03381776315 </p>
-
-                <p><i class="fa fa-envelope"></i> <a href="mailto:NLT@noblelofttheory.com">NLT@noblelofttheory.com</a></p>
-            </div>
+                </div>
 
 
-            <!-- Cột 4: Fanpage -->
-            <div class="footer-col">
-                <h3>Fanpage</h3>
-                <div class="fanpage-box">
+                <!-- Cột 3: Thông tin liên hệ -->
+                <div class="footer-col">
+                    <h3>Thông tin liên hệ</h3>
+                    <p><i class="fa fa-map-marker"></i> Khu phố 6, P.Linh Trung, TP.Thủ Đức</p>
+                    <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
+                    <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
+                    <p><i class="fa fa-envelope"></i> <a
+                            href="mailto:NLT@noblelofttheory.com">NLT@noblelofttheory.com</a></p>
+                </div>
+
+                <!-- Cột 4: Fanpage -->
+                <div class="footer-col">
+                    <h3>Fanpage</h3>
                     <p>Liên hệ ngay trang chủ của shop Noble Loft Theory.</p>
                     <p>Nếu bạn đang có thắc mắc gì ở sản phẩm.</p>
                     <p>Fanpage, Youtube và Instagram.</p>
 
-
                     <div class="social-box">
                         <div class="social-icons">
-                            <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/share/1HP5fZGNqb/?mibextid=wwXIfr">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/nltnoblelofttheory/">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a href="https://www.youtube.com/channel/UC931-4vCWPGos5fSNQ8Rh-g">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="footer-bottom">
-        <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT </p>
-    </div>
-    </div>
-</footer>
-
+        <div class="footer-bottom">
+            <p>Copyright © 2025 NLT Noble Loft Theory. Powered by NLT</p>
+        </div>
+    </footer>
 </body>
 
 </html>
