--- a/tracking.html
+++ b/tracking.html
@@ -115,32 +115,32 @@
     <!--====HEADER===-->
 
     <header class="header">
-    <div class="header-top">
-      <div class="logo">
-        <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
-        <span><a href="index.html">Noble Loft Theory</a></span>
-      </div>
-      <div class="search-box">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="text" placeholder="Tìm kiếm">
-      </div>
-      <div class="header-right">
-        <a href="tracking.html">Tra cứu đơn hàng</a>
-        <a href="gioithieu.html">Giới thiệu</a>
-        <a href="contact.html">Liên hệ</a>
-        <div class="icons">
-            <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
-            <a href="login.html" class="circle"><i class="fa-solid fa-user"></i></a>
+        <div class="header-top">
+            <div class="logo">
+                <img src="https://i.postimg.cc/5t4yq9qJ/logo-ltw.jpg" alt="Logo">
+                <span><a href="home.html">Noble Loft Theory</a></span>
+            </div>
+            <div class="search-box">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Tìm kiếm">
+            </div>
+            <div class="header-right">
+                <a href="tracking.html">Tra cứu đơn hàng</a>
+                <a href="gioithieu.html">Giới thiệu</a>
+                <a href="contact.html">Liên hệ</a>
+                <div class="icons">
+                    <a href="cart.html" class="circle"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <a href="account.html" class="circle"><i class="fa-solid fa-user"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
     </header>
 
     <main>
 
         <!-- ===== BREADCRUMB / TIẾN TRÌNH ===== -->
         <div class="breadcrumb">
-            <a href="index.html">Trang chủ</a> &#47;
+            <a href="home.html">Trang chủ</a> &#47;
             <span class="current">Tra cứu đơn hàng </t></span>
         </div>
 
@@ -292,8 +292,6 @@
 
     </main>
 
-
-
     <footer class="footer">
         <div class="container">
             <div class="footer-columns">
@@ -311,25 +309,20 @@
                 <div class="footer-col">
                     <h3>Liên kết</h3>
                     <ul>
-                        <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                        <ul>
-
-                            <div> </div>
-                            <li><a href="#"> Chính sách đổi trả hoàn hàng</a></li>
-                            <li><a href="#"> Chính sách bảo mật mật khẩu</a></li>
-                            <li><a href="#"> Hướng dẫn mua hàng, sản phẩm</a></li>
-                            <li><a href="#"> Chính sách kiểm hàng hóa vận chuyển</a></li>
-                            <li><a href="#"> Chính sách giao hàng tận nơi</a></li>
-                            <li><a href="#"> Hướng dẫn thanh toán đơn hàng</a></li>
-
-                        </ul>
+                        <li><a>Chính sách đổi trả hoàn hàng</a></li>
+                        <li><a>Chính sách bảo mật mật khẩu</a></li>
+                        <li><a>Hướng dẫn mua hàng, sản phẩm</a></li>
+                        <li><a>Chính sách kiểm hàng hóa vận chuyển</a></li>
+                        <li><a>Chính sách giao hàng tận nơi</a></li>
+                        <li><a>Hướng dẫn thanh toán đơn hàng</a></li>
                     </ul>
+
                 </div>
 
                 <!-- Cột 3: Thông tin liên hệ -->
                 <div class="footer-col">
                     <h3>Thông tin liên hệ</h3>
-                    <p><i class="fa fa-map-marker"></i> Khu phố 6, P.Linh Trung, TP.Thủ Đức</p>
+                    <p><i class="fa fa-map-marker"></i>Khu phố 33, P.Linh Xuân, TP.HCM</p>
                     <p><i class="fa fa-map-marker"></i> Đại học Nông Lâm TP.Hồ Chí Minh</p>
                     <p><i class="fa fa-phone"></i> Liên hệ: 03751841444 - 03381776315 </p>
 
@@ -350,9 +343,12 @@
                         <div class="social-box">
                             <div class="social-icons">
                                 <!-- mấy cái # này là chưa có link liên kết nào có gắn v -->
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="https://www.facebook.com/share/1HP5fZGNqb/?mibextid=wwXIfr">
+                                    <i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/nltnoblelofttheory/">
+                                    <i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/channel/UC931-4vCWPGos5fSNQ8Rh-g">
+                                    <i class="fa-brands fa-youtube"></i></a>
                             </div>
                         </div>
                     </div>
